# Ambula

./: README.md  docker-compose.yaml
docker/: Dockerfile.carrot  Dockerfile.main  Dockerfile.radish  dependencies_ros.repos
robot_ws/install/: setup.sh
robot_ws/install/ambula_bringup/share/ambula_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/ambula_controller/share/ambula_controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/ambula_description/share/ambula_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws/install/ambula_hw/share/ambula_hw/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/ambula_perception/share/ambula_perception/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/ambula_rl/share/ambula_rl/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/ambula_safety/share/ambula_safety/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/ambula_state_estimator/share/ambula_state_estimator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws/install/ambula_world/share/ambula_world/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws/log/: latest_build
robot_ws/src/ambula_bringup/: CMakeLists.txt  package.xml
robot_ws/src/ambula_bringup/launch/: bringup.launch.py  description.launch.py  simulation_bringup.launch.py  summon_ambula.launch.py
robot_ws/src/ambula_controller/: CMakeLists.txt  package.xml
robot_ws/src/ambula_controller/ambula_cal/: find_k_LQR.ipynb  kinematic.ipynb  kinematic_v2.ipynb  lqr_gain_table.h  path_planning.ipynb  whole_body_control.ipynb
robot_ws/src/ambula_controller/ambula_controller/: fk_leg_planar3r_symbolic.py  fk_leg_plot.py  frames.py  kinematics.py  utils.py  wbc_core.py  wbc_kinematic.py
robot_ws/src/ambula_controller/config/: balance_control.yaml  balance_control_sim.yaml  leg_kinematic.yaml  leg_kinematic_sim.yaml  recovery.yaml  rl.yaml  teleop.yaml  wheel_kinematic_sim.yaml
robot_ws/src/ambula_controller/launch/: balance_control.launch.py  balance_control_sim.launch.py  leg_kinematic.launch.py  leg_kinematic_sim.launch.py  recovery.launch.py  rl.launch.py  teleop.launch.py  wheel_kinematic_sim.launch.py
robot_ws/src/ambula_controller/script/: convert_to_motor.cpp  height_adjust.cpp  inverse_kinematic.cpp  joint_smoother.cpp  lqr_control.cpp  pd_control.cpp
robot_ws/src/ambula_controller/src/: balance_control.py  forward_kinematic.py  height_to_point.py  inverse_kinematic.py  joint_converter.py  joint_sim2real.py  joint_smoother.py  joint_state_command_merge.py  joint_state_demo.py  joint_visualizer.py  leg_fk.py  leg_ik.py  leg_joint_cmd.py  pd_balance.py  position_control.py  stand_feedforward.py  wbc_node.py  wheel_cmd.py
robot_ws/src/ambula_hw/: CMakeLists.txt  package.xml
robot_ws/src/ambula_hw/ambula_fw/: platformio.ini
robot_ws/src/ambula_hw/ambula_fw/src/: main.cpp
robot_ws/src/ambula_hw/ambula_fw/test/: bno055_test.cpp  canbus_impedance control.cpp  canbus_test.cpp  i2c_scanner.cpp  micro_ros.cpp  micro_ros_command.cpp  micro_ros_complete_v.10.cpp  micro_ros_complete_v.11.cpp  micro_ros_complete_v.12.cpp  micro_ros_complete_v.13.cpp  micro_ros_complete_v.2.cpp  micro_ros_complete_v.3.cpp  micro_ros_complete_v.4.cpp  micro_ros_complete_v.5.cpp  micro_ros_complete_v.6.cpp  micro_ros_complete_v.7.cpp  micro_ros_complete_v.8.cpp  micro_ros_complete_v.9.cpp  micro_ros_imu.cpp  micro_ros_joint_state.cpp  solinoid_test.cpp
robot_ws/src/ambula_hw/ambula_motor/: README.md  current_homing.py  fk_leg.py  set_motor_5064.py  set_motor_hip.py  set_motor_knee.py  set_motor_wheel.py
robot_ws/src/ambula_hw/ambula_motor/temp/: ik_motor.py  plot_velocity.py  set_as5048a.py  set_hall.py  set_motor_hip.py  set_motor_knee.py  set_motor_wheel.py
robot_ws/src/ambula_interfaces/: CMakeLists.txt  package.xml
robot_ws/src/ambula_interfaces/msg/: ImuEuler.msg  StateEstimation.msg
robot_ws/src/ambula_perception/: CMakeLists.txt  package.xml
robot_ws/src/ambula_perception/src/: stair_perception.cpp
robot_ws/src/ambula_rl/: CMakeLists.txt
robot_ws/src/ambula_rl/src/: act_dump.npy  obs_dump.npy  onnx_latency_actions.csv  policy.onnx  test_rl.py
robot_ws/src/ambula_safety/: CMakeLists.txt  package.xml
robot_ws/src/ambula_simulation/ambula_description/: CMakeLists.txt
robot_ws/src/ambula_simulation/ambula_description/config/: ambula_control.yaml  gazebo_bridge.yaml
robot_ws/src/ambula_simulation/ambula_description/meshs/: left_hip.stl  left_knee.stl  left_waist.stl  right_hip.stl  right_waist.stl  wheel.stl
robot_ws/src/ambula_simulation/ambula_world/: CMakeLists.txt
robot_ws/src/ambula_state_estimator/: CMakeLists.txt
robot_ws/src/ambula_state_estimator/config/: drive_kinematics.yaml  drive_kinematics.yaml.backup  drive_kinematics_sim.yaml  ekf.yaml  ekf_sim.yaml  imu_filters_sim.yaml  state_vector_sim.yaml
robot_ws/src/ambula_state_estimator/launch/: drive_kinematics.launch.py  drive_kinematics_sim.launch.py  imu_filters_sim.launch.py  localization.launch.py  localization_sim.launch.py  state_estimation.launch.py  state_estimation_sim.launch.py  state_vector_sim.launch.py
robot_ws/src/ambula_state_estimator/src/: diff_drive_kinematics.py  diff_drive_kinematics.py.backup  height_estimator.py  imu_orientation_to_euler.py  state_vector.py
robot_ws/src/ambula_state_machine/: CMakeLists.txt  package.xml
robot_ws/src/ambula_state_machine/ambula_state_machine/: balance.py  feedforward.py  move.py
robot_ws/src/ambula_state_machine/config/: state_machine.yaml
robot_ws/src/ambula_state_machine/launch/: state_machine.launch.py
robot_ws/src/ambula_state_machine/src/: autonomy_node.py  flat_balance_node.py
(+62 files in other folders)
